--- a/memoria/Capitulos/analtemporal.tex
+++ b/memoria/Capitulos/analtemporal.tex
@@ -2,7 +2,7 @@
 \section{An\'alisis temporal}
 \subsection{Iteraciones}
 
-Dividiremos el trabajo en varias iteraciones, de forma que el proyecto se quede lo más planificado posible para que, a la hora de trabajar, solo haya que seguir las iteraciones:\\
+Para poder tener una idea más clara de todo lo que hay que desarrollar a lo largo del tiempo y poder realizar un incremento poco a poco de las funcionalidades que vamos a implementar, dividiremos el trabajo en varias iteraciones, de forma que el proyecto se quede lo más planificado posible para que, a la hora de trabajar, solo haya que seguirlas:\\
 
 \textbf{Iteración 1}
 
@@ -34,13 +34,17 @@ Una vez realizada la iteración, tuvimos que afrontar algunas decisiones que han
 
 En la última iteración queremos terminar la redacción de la documentación y revisarla de forma que se quede lista para la entrega, arreglar los posibles fallos menores que queden del proyecto, comprobar que la aplicación está terminada y realizar el despliegue.\\
 
+Además, dado que somos dos personas, nos hemos tenido que repartir el trabajo para realizarlo de manera eficiente, por lo que a continuación mostramos una tabla para ver el reparto de tareas a lo largo del proyecto:\\
+
+\includegraphics[width=\textwidth]{img/cap4/repartotareas.png}\\
+
+\clearpage
+
 \subsection{Estimación vs Realidad}
 
 \includegraphics[width=\textwidth]{img/cap4/analisistiempo.png}\\
 
 Al haber eliminado diseños y probador (ver capítulo 6), se han reducido en parte las horas reales en el sprint 5. Sin embargo, debido a que hemos acabado realizando los tests en el sprint 6, así como a los distintos fallos de despliegue a los que nos hemos enfrentado, hemos tenido que dedicarle más tiempo del que pensábamos a dicho sprint, por lo que hemos contado con tiempo de margen y como se puede observar, no ha supuesto un problema respecto a la planificación.
-
-\clearpage
 
 \section{Costes de desarrollo}
 	
