--- a/memoria/Capitulos/pruebas.tex
+++ b/memoria/Capitulos/pruebas.tex
@@ -1,6 +1,6 @@
 \chapter{Pruebas}\label{pruebas}
 
-A continuación, se muestra el plan de pruebas que hemos llevado a cabo para probar el correcto funcionamiento de nuestra aplicación.\\
+Como todo buen proyecto (y como se nos ha enseñado en la carrera), para asegurarnos de que todo funciona correctamente hemos tenido que realizar una serie de pruebas. Dado que el tiempo que teníamos era limitado, hemos optado por probar menos componentes, pero realizar un mayor número de pruebas por componente, así como de mayor complejidad. A continuación, se muestra el plan de pruebas que hemos llevado a cabo para probar el correcto funcionamiento de nuestra aplicación.\\
 
 \includegraphics[width=\textwidth]{img/cap7/cp-001.png}
 
