--- a/memoria/pfcbib.bib
+++ b/memoria/pfcbib.bib
@@ -10,45 +10,45 @@
 @comment{jabref-meta: selector_keywords:}
 
 @MISC{acnhapi,
-	title = {ACNH API},
+	title = {{ACNH} {API}},
 	year = {2020},
 	publisher = {Alexis8717},
 	author = {Alexis8717},
 	url = {https://acnhapi.com},
-	Note = {fecha de consulta: Febrero de 2021},
+	Note = {Fecha de consulta: Febrero de 2021},
 	owner = {Alexis8717},
 	timestamp = {}
 }
 
 @MISC{acnhnpm,
-	title = {Animal Crossing: New Horizons database for npm},
+	title = {Animal {C}rossing: New {H}orizons database for npm},
 	year = {2020},
 	publisher = {Norviah},
 	author = {Norviah},
 	url = {https://github.com/Norviah/animal-crossing},
-	Note = {fecha de consulta: Febrero de 2021},
+	Note = {Fecha de consulta: Febrero de 2021},
 	owner = {Norviah},
 	timestamp = {}
 }
 
 @MISC{turnipprophet,
-	title = {Turnip Prophet},
+	title = {Turnip {P}rophet},
 	year = {2020},
 	publisher = {},
 	author = {Varios Autores},
 	url = {https://turnipprophet.io/},
-	Note = {fecha de consulta: Abril de 2021},
+	Note = {Fecha de consulta: Abril de 2021},
 	owner = {Mike Bryant},
 	timestamp = {}
 }
 
 @MISC{nabosninji,
-	title = {Turnip Prices},
+	title = {Turnip {P}rices},
 	year = {2020},
 	publisher = {Ninji},
 	author = {Ninji},
 	url = {https://gist.github.com/Treeki/85be14d297c80c8b3c0a76375743325b},
-	Note = {fecha de consulta: Abril de 2021},
+	Note = {Fecha de consulta: Abril de 2021},
 	owner = {Ninji},
 	timestamp = {}
 }
@@ -59,7 +59,7 @@
 	publisher = {LeParadoxHD},
 	author = {LeParadoxHD},
 	url = {https://www.youtube.com/watch?v=SZtxwDAqEok&list=PLezsbUDiwcpmhNiMzVPYJXV0Rqn71G4PU},
-	Note = {fecha de consulta: Octubre de 2020},
+	Note = {Fecha de consulta: Octubre de 2020},
 	owner = {LeParadoxHD},
 	timestamp = {}
 }
@@ -70,40 +70,40 @@
 	publisher = {},
 	author = {Varios Autores},
 	url = {https://nookipedia.com/wiki/Main_Page},
-	Note = {fecha de consulta: Octubre de 2020},
+	Note = {Fecha de consulta: Octubre de 2020},
 	owner = {},
 	timestamp = {}
 }
 
 @MISC{acnhdirectory,
-	title = {ACNH.Directory},
+	title = {{ACNH.D}irectory},
 	year = {2020},
 	publisher = {KevinPayravi},
 	author = {KevinPayravi},
 	url = {https://nookipedia.com/wiki/Main_Page},
-	Note = {fecha de consulta: Octubre de 2020},
+	Note = {Fecha de consulta: Octubre de 2020},
 	owner = {KevinPayravi},
 	timestamp = {}
 }
 
 @MISC{nookipediaapi,
-	title = {Nookiepdia API},
+	title = {Nookiepdia {API}},
 	year = {2020},
 	publisher = {KevinPayravi},
 	author = {KevinPayravi},
 	url = {https://api.nookipedia.com},
-	Note = {fecha de consulta: Febrero de 2021},
+	Note = {Fecha de consulta: Febrero de 2021},
 	owner = {KevinPayravi},
 	timestamp = {}
 }
 
 @MISC{angularcalendar,
-	title = {Angular Calendar},
+	title = {Angular {C}alendar},
 	year = {2018},
 	publisher = {Matt Lewis},
 	author = {Matt Lewis},
 	url = {https://github.com/mattlewis92/angular-calendar},
-	Note = {fecha de consulta: Abril de 2021},
+	Note = {Fecha de consulta: Abril de 2021},
 	owner = {Matt Lewis},
 	timestamp = {}
 }
