--- a/memoria/proyect.tex
+++ b/memoria/proyect.tex
@@ -6,7 +6,7 @@
 \usepackage{natbib}
 %\let\bibhang\relax
 \usepackage{apalike}
-\usepackage{hyperref}
+\usepackage[colorlinks=true]{hyperref}
 
   
 
